fix: home layout shift

--- a/resources/sass/pages/_home.scss
+++ b/resources/sass/pages/_home.scss
@@ -344,18 +344,26 @@
 
     .home-welcome-bg {
         width: 100%;
-        height: 700px;
+        height: 500px;
         position: relative;
         display: flex;
         align-items: center;
+
+        @media only screen and (max-width: 1400px) {
+            height: 400px;
+        }
+
 
         img {
             position: absolute;
             top: 0;
             object-fit: cover;
+            object-position: center;
             width: 100%;
-            height: 700px;
+            height: 100%;
             z-index: 1;
+
+
         }
     }
 
@@ -374,30 +382,18 @@
 
     h1 {
         font-size: 5rem !important;
-    }
 
-    @media only screen and (max-width: 1400px) {
-        height: 500px;
-
-        h1 {
+        @media only screen and (max-width: 1400px) {
             font-size: 4.5rem !important;
+
         }
-    }
-
-    @media only screen and (max-width: 800px) {
-        height: 400px;
-
-        h1 {
+        @media only screen and (max-width: 800px) {
             font-size: 4rem !important;
         }
-    }
-
-    @media only screen and (max-width: 600px) {
-        h1 {
+        @media only screen and (max-width: 600px) {
             font-size: 3rem !important;
         }
     }
-
 }
 
 .home-description {
@@ -435,6 +431,7 @@
         justify-content: center;
         flex-wrap: wrap;
         padding: 0 0 80px;
+        gap: 20px;
 
         a {
             flex-basis: 200px;
@@ -444,9 +441,8 @@
 
 
     .home-category-card {
-        margin: 10px;
         border-radius: 20px;
-        width: 200px;
+        width: 100%;
         height: 180px;
         display: flex;
         align-items: center;
